sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:11: error: ')' expected but '}' found.
  }
  ^